--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,15 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*",
         "symfony/yaml": "5.1.*"
-    },
-    "require-dev": {
     },
     "config": {
         "optimize-autoloader": true,
@@ -59,5 +61,11 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
+    },
+    "require-dev": {
+        "doctrine/annotations": "^1.11",
+        "symfony/maker-bundle": "^1.23",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     }
 }
